2007-10-10  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/locfile-token.h: Remove tok_elif, add tok_elifdef
	and tok_elifndef.
	* locale/programs/locfile-kw.gperf: Likewise.
	* locale/programs/ld-collate.c: Implement primitive preprocessor.

2007-10-10  Jakub Jelinek  <jakub@redhat.com>

	* stdio-common/printf-parse.h: Include string.h and wchar.h.
	(__find_specwc): Change into __extern_always_inline function.
	(__find_specmb): Likewise.  Remove ps argument.  Use __strchrnul.
	(__parse_one_specmb): Remove ps argument.
	* stdio-common/vfprintf.c (vfprintf): Remove mbstate variable.
	Adjust __find_specmb and __parse_one_specmb callers.
	* stdio-common/printf-prs.c (parse_printf_format): Likewise.
	* stdio-common/printf-parsemb.c (__find_specwc, __find_specmb):
	Removed.
	(__parse_one_specmb): Remove ps argument, adjust __find_specmb
	caller.

2007-10-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/cacheinfo.c (init_cacheinfo): Work around problem
	with some Pentium Ds.

2007-10-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/eventfd_read.c (eventfd_read): Use
	__read not read.
	* sysdeps/unix/sysv/linux/eventfd_write.c (eventfd_write): Use
	__write not write.

2007-10-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #181]
	* locale/C-time.c: Set week_1stday data to 19971201.
	* locale/programs/ld-time.c (time_finish): Default for
	first_workday is Monday.

	[BZ #2633]
	* wcsmbs/wchar.h: Move many C99 functions into std namespace.

	[BZ #5103]
	* posix/glob.c (glob): Recognize patterns starting \/.
	* posix/tst-gnuglob.c (find_file): Handle absolute path names.
	(main): Add test for pattern starting \/.

	* misc/error.h: Use __const instead of const.
	* misc/bits/error.h: Likewise.

2007-10-07  Andreas Jaeger  <aj@suse.de>

	* include/bits/error.h: New file.

	* misc/bits/error.h (error_at_line): Fix prototype.

2007-10-06  Ulrich Drepper  <drepper@redhat.com>

	[BZ #3924]